--- a/CCIP/CCIP/CheckinViewController.xib
+++ b/CCIP/CCIP/CheckinViewController.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11129.15" systemVersion="16A201w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CheckinViewController">
@@ -12,18 +12,41 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="CheckinView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CheckinView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMS-jI-vBZ">
-                    <frame key="frameInset" minX="51" minY="129" width="272" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CheckinView" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0HX-zb-DL9">
+                    <rect key="frame" x="250" y="160" width="99" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJW-Ma-5gI">
+                    <rect key="frame" x="277.5" y="337" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="107" id="qPA-H8-bOB"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="qPA-H8-bOB"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="checkinBtnEvent:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="Mko-J9-PfO"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="BJW-Ma-5gI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5d5-hr-dEq"/>
+                <constraint firstItem="0HX-zb-DL9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="160" id="7JK-fQ-SVd"/>
+                <constraint firstAttribute="bottom" secondItem="BJW-Ma-5gI" secondAttribute="bottom" constant="233" id="SHv-ET-YbN"/>
+                <constraint firstItem="0HX-zb-DL9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cTh-GI-RMy"/>
+            </constraints>
+            <connections>
+                <outlet property="checkinBtn" destination="BJW-Ma-5gI" id="MGk-xs-Rkx"/>
+            </connections>
         </view>
     </objects>
 </document>
